--- a/src/pages/(auth)/login/Login.scss
+++ b/src/pages/(auth)/login/Login.scss
@@ -1,5 +1,3 @@
-// src/Login.scss
-
 $password-icon-position: 10px;
 $input-padding: 12px 0;
 $border-radius: 15px;
@@ -14,6 +12,7 @@ $background-color: #FFFFFF;
         position: absolute;
         right: $password-icon-position;
         top: 50%;
+      right: 8%;
         transform: translateY(-50%);
         background: none;
         border: none;
@@ -72,7 +71,7 @@ $background-color: #FFFFFF;
     border-radius: 24px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 350px;
+    width: 450px;
 
     .logo {
         margin-bottom: 20px;
@@ -101,6 +100,7 @@ $background-color: #FFFFFF;
         width: 45px;
         height: 45px;
         border: none;
+        
         background-color: $background-color;
         border-radius: 5px;
         cursor: pointer;
@@ -110,6 +110,7 @@ $background-color: #FFFFFF;
 }
 
 .filed-tip {
+    // border: 1px solid red;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -117,6 +118,7 @@ $background-color: #FFFFFF;
     img {
         margin-right: 10px;
         height: 20px;
+        // border: 1px solid red;
     }
 }
 
