--- a/src/pages/(loggedIn)/BookRoom/BookRoom.scss
+++ b/src/pages/(loggedIn)/BookRoom/BookRoom.scss
@@ -578,6 +578,14 @@
   &:hover {
     background-color: #7c3aed;
   }
+
+  &:disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+    &:hover {
+      background-color: initial; // Prevent hover effect when disabled
+    }
+  }
 }
 
 .bed-details-panel {
