--- a/src/pages/(loggedIn)/donation/AllDonation.scss
+++ b/src/pages/(loggedIn)/donation/AllDonation.scss
@@ -169,4 +169,27 @@
             }
         }
     }
+
+    .no-data-message {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 40px;
+        background-color: #f9fafb;
+        border-radius: 8px;
+        text-align: center;
+
+        .material-icons {
+            font-size: 48px;
+            color: #9ca3af;
+            margin-bottom: 16px;
+        }
+
+        p {
+            color: #6b7280;
+            font-size: 16px;
+            margin: 0;
+        }
+    }
 }
