--- a/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
+++ b/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
@@ -11,7 +11,7 @@
 .popup-content {
   background: white;
   border-radius: 8px;
-  padding: 40px 20px;
+  padding: 40px 20px 0px;
   width: 100%;
   max-width: 1200px;
   max-height: 150vh;
