--- a/src/pages/(loggedIn)/BookRoom/BookRoom.scss
+++ b/src/pages/(loggedIn)/BookRoom/BookRoom.scss
@@ -377,10 +377,11 @@
 
   &.beds-3 {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
 
     .bed-icon:last-child {
-      grid-column: span 2;
+      grid-column: 1 / 2;
+      grid-row: 2;
       justify-self: center;
     }
   }
@@ -470,6 +471,8 @@
   flex: 1;
   min-width: 0;
   transition: flex 0.3s ease;
+  // background-color: #fff;
+  border-radius: 20px;
 
   &:has(+ .guests-panel) {
     flex: 0 0 50%;
