--- a/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/VerifyDetails/VerifyDetails.scss
@@ -67,7 +67,7 @@
   }
 
   .address-details {
-    margin: 10px 0;
+    margin: 10px 0 0;
     display: flex;
     flex-direction: column;
     margin-left: 55px;
