--- a/src/pages/dormitoryApplicationForm/dormitoryApplicationTabs/DormitoryVerifyDetails/DormitoryVerifyDetails.scss
+++ b/src/pages/dormitoryApplicationForm/dormitoryApplicationTabs/DormitoryVerifyDetails/DormitoryVerifyDetails.scss
@@ -14,8 +14,8 @@
   .accommodation-section {
     background: #fff2ea;
     border-radius: 8px;
-    padding: 1.5rem;
-    margin-bottom: 2rem;
+    padding: 1.5rem 1.5rem 0;
+    // margin-bottom: 2rem;
   }
 
   .section-header {
