--- a/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
+++ b/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
@@ -11,7 +11,7 @@
 .popup-content {
   background: white;
   border-radius: 8px;
-  padding: 40px 20px 0px;
+  padding: 20px 20px 0px;
   width: 100%;
   max-width: 1200px;
   max-height: 150vh;
@@ -106,7 +106,7 @@
           background: #f8f8ff;
           padding: 4px 12px;
           border-radius: 4px;
-          border: 1px solid #e8e8ff;
+          border: 1px solid #066bff;
 
           img {
             width: 14px;
@@ -187,7 +187,7 @@
 
   .close-btn {
     position: absolute;
-    top: -25px;
+    top: 9px;
     right: 0px;
     background: none;
     border: none;
