--- a/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
+++ b/src/components/ui/GuestDetailsPopup/GuestDetailsPopup.scss
@@ -436,6 +436,7 @@
     display: flex;
     justify-content: flex-end;
     gap: 12px;
+    margin-left: auto;
 
     button {
       padding: 8px 24px;
