--- a/src/pages/(loggedIn)/donation/NewDonation.scss
+++ b/src/pages/(loggedIn)/donation/NewDonation.scss
@@ -1525,6 +1525,7 @@ input[type="email"].borderless-input {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 10px !important;
 
     h2 {
       font-size: 20px;
