--- a/src/components/ui/header/Header.scss
+++ b/src/components/ui/header/Header.scss
@@ -10,7 +10,7 @@
     li {
       a {
         &.active {
-          border-bottom: 5px solid #9867e9;
+          border-bottom: 5px solid #ea7704;
           padding: 22px 0px;
         }
       }
