--- a/src/pages/(loggedIn)/donation/NewDonation.scss
+++ b/src/pages/(loggedIn)/donation/NewDonation.scss
@@ -1556,7 +1556,7 @@ input[type="email"].borderless-input {
 .details-card.donation-details {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  // gap: 5px;
 }
 
 .details-card.transaction-details {
